# SieveAI-Dev

./: CITATION.cff  README.md  pyproject.toml
sieveai/: __init__.py  __metadata__.py  plug.py  sieveaibase.py
sieveai/docs/basic/: quick.md  test.md
sieveai/entity/: __init__.py  atom.py  base.py  chain.py  compound.py  macromolecule.py  molecule.py  residue.py
sieveai/managers/: __init__.py  base.py  config.py  manager.py  once.py  plugin.py  structure.py  web.py
sieveai/plugins/: alphafold.py  alphafoldweb.py  annapurna.py  base.py  chimerax.py  cir.py  clouddata.py  desmond.py  flexx.py  freesasa.py  gmx.py  gmx_mmpbsa.py  hdocklite.py  hdockweb.py  mgltools.py  openbabel.py  openmm.py  patchdock.py  patchdockweb.py  structuresync.py  vina.py  vmdpython.py
sieveai/process/: analysis.py  base.py  converter.py  docking.py  dynamics.py  master.py  ranking.py  rescoring.py
